cspm/cspm-platform/services/inventory-collector/output/588989875114/us-east-2/ec2_156/describe_network_acls/describe_network_acls_output_20250603_145546.json
{
  "NetworkAcls": [
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-950218fd",
          "NetworkAclId": "acl-81ab9ce8",
          "SubnetId": "subnet-605f2e1b"
        },
        {
          "NetworkAclAssociationId": "aclassoc-960218fe",
          "NetworkAclId": "acl-81ab9ce8",
          "SubnetId": "subnet-8172cccc"
        },
        {
          "NetworkAclAssociationId": "aclassoc-940218fc",
          "NetworkAclId": "acl-81ab9ce8",
          "SubnetId": "subnet-f9645290"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-81ab9ce8",
      "Tags": [],
      "VpcId": "vpc-26bc9b4f",
      "OwnerId": "588989875114"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "9c2083a5-7e7a-42de-9698-9e54740ec9f2",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "9c2083a5-7e7a-42de-9698-9e54740ec9f2",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "1501",
      "date": "Tue, 03 Jun 2025 14:55:59 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
